--- a/package.json
+++ b/package.json
@@ -7,8 +7,18 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
+    "react-fade-in": "^2.0.1",
+    "react-icons": "^4.3.1",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.2",
+    "react-type-animation": "^1.1.2",
+    "react-typist": "^2.0.5",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
